# Rullst

./: .ai-rules  .codecov.yml  .dockerignore  .gitignore  .mutants.toml  AGENTS.md  AUDIT.md  AUDITORIA.md  Audit_June_01.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Jules.md  Jules_Audit.md  Jules_Audit1.md  LICENSE  README.md  README.pt.md  RELEASE_GUIDE.md  RESULTS10.md  ROADMAP.md  ROADMAP.pt.md  Rullst_Audit.md  SECURITY.md  _typos.toml  clippy_output.json  data.js  deny.toml  devinfo.md  fix_compose.py  fix_mail.py  fix_merge.py  fix_queue.py  fix_queue.sh  index.html  inject_favicon.py  jules.md  newbenchmarks.md  osv-scanner.toml  (+11 more)
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benches/: data.js
benchmark/: .gitignore  Dockerfile.bombardier  README.md  RESULTS11.md  RESULTS7.md  RESULTS8.md  RESULTS9.md  capture_stats.sh  compile_results.sh  db_init.sql  docker-compose.yml  init.sql  init_db.sh  parse_results.py  run_all.sh  run_benchmarks.ps1  run_benchmarks.sh  run_benchmarks_subset.ps1  run_benchmarks_tier1_4.sh  run_benchmarks_tier3.sh  run_bombardier.sh  run_java_benchmarks.sh  run_load_tests.sh  run_resource_tests.sh  run_stats.sh  run_tier1_tier4.sh  run_tier3.sh  run_tier_1_4.sh  run_tier_3.sh  scripts.md  setup_db.sh
benchmark/actix/: Cargo.toml  Dockerfile
benchmark/actix/benches/: actix_microbench.rs
benchmark/actix/src/: lib.rs  main.rs
benchmark/axum/: Cargo.toml  Dockerfile
benchmark/axum/benches/: axum_microbench.rs
benchmark/axum/src/: main.rs
benchmark/dioxus/: Cargo.toml  Dockerfile
benchmark/dioxus/benches/: dioxus_benches.rs
benchmark/dioxus/src/: main.rs
benchmark/leptos/: Cargo.toml  Dockerfile
benchmark/leptos/benches/: leptos_benches.rs
benchmark/leptos/src/: main.rs
benchmark/loco/: Cargo.toml  Dockerfile
benchmark/loco/config/: development.yaml
benchmark/loco/src/: main.rs
benchmark/poem/: Cargo.toml  Dockerfile
benchmark/poem/benches/: poem_benchmarks.rs
benchmark/poem/src/: main.rs
benchmark/rocket/: Cargo.toml  Dockerfile
benchmark/rocket/benches/: benchmark.rs
benchmark/rocket/src/: main.rs
benchmark/warp/: Cargo.toml  Dockerfile
benchmark/warp/benches/: warp_benchmarks.rs
benchmark/warp/src/: main.rs
book/: 1-getting-started.html  2-rullst-ai.html  3-rullst-studio.html  4-rullst-nexus.html  404.html  5-rullst-capital.html  blueprints_roadmap.html  index.html  philosophy.html  print.html  searcher-09f2665d.js  searchindex-5a9ebc72.js  spec.html  toc-8c38a868.js  toc.html
cargo-rullst/: Cargo.toml
cargo-rullst/src/: cli.rs  docs_generator.rs  main.rs
cargo-rullst/src/blueprints/: blank.rs  blog.rs  erp.rs  lms.rs  mod.rs  portfolio.rs  saas.rs  uptime.rs
cargo-rullst/src/generators/: auth.rs  billing.rs  billing_page.rs.template  build.rs  controller.rs  cors_jwt.rs  db.rs  desktop.rs  dev.rs  diagram.rs  foundry.rs  introspect.rs  island.rs  middleware.rs  migration.rs  mod.rs  model.rs  openapi.rs  project.rs  ts.rs  worker.rs
cargo-rullst/src/ui/: components.rs  mod.rs
docs/: 1-getting-started.md  2-rullst-ai.md  2-tutorial-rullstpress.md  3-masterclass-building-a-saas.md  3-rullst-studio.md  3-tutorial-blog.md  6-rullstpress-engine.md  index.md  (+11 more)
examples/blog/: Cargo.toml  Foundry.toml  Rullst.toml
examples/blog/omni-app/: Cargo.toml
examples/blog/omni-app/src/: main.rs  style.css
examples/blog/src/: interactive_counter.rs  lib.rs  live_counter.rs  main.rs
examples/blog/src-tauri/: Cargo.toml  tauri.conf.json
examples/blog/src-tauri/icons/: icon.icns
examples/blog/src-tauri/src/: main.rs
examples/blog/static/: rullst_blog_example.js  rullst_blog_example.js.br  rullst_blog_example.js.zst  rullst_blog_example_bg.wasm  rullst_blog_example_bg.wasm.br  rullst_blog_example_bg.wasm.zst
rullst/: .rullst_dev_key  Cargo.toml
rullst-macros/: Cargo.toml
rullst-macros/src/: html_parser.rs  lib.rs  live_parser.rs
rullst-press/: Cargo.toml  README.md
rullst-press/src/: main.rs
rullst/benches/: rullst_bench.rs
rullst/fuzz/: Cargo.toml
rullst/fuzz/fuzz_targets/: auth_crypto.rs  auth_session.rs  html_escape.rs  htmx_headers.rs  mask_pii.rs  routing.rs  security_csrf.rs  security_waf.rs  validation_json.rs
rullst/src/: artisan.rs  auth.rs  cache.rs  capital.rs  client.rs  config.rs  db.rs  edge.rs  error_console.rs  feature.rs  horizon.rs  html.rs  htmx.rs  lib.rs  live.rs  mail.rs  multitenant.rs  nexus.rs  queue.rs  resilience.rs  routing.rs  scheduler.rs  security.rs  server.rs  storage.rs  studio.rs  telemetry.rs  testing.rs  validation.rs  ws.rs
rullst/src/ai/: mod.rs
rullst/src/ai/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
rullst/src/auth/: passkey.rs  passkey.rs.orig
rullst/tests/: capital_tests.rs  edge_tests.rs  error_console_tests.rs  feature_tests.rs  html_snapshot_tests.rs  jules_tests.rs  live_tests.rs  mail_tests.rs  nexus_tests.rs  queue_tests.rs  resilience_tests.rs  security_tests.rs  server_tests.rs  storage_tests.rs  studio_tests.rs  testing_tests.rs
rust-fullstack-benchmarks/: Cargo.toml
rust-fullstack-benchmarks/benches/: routing.rs  ssr.rs
scratch/test_htmx_app/: Cargo.toml
scratch/test_htmx_app/src/: main.rs
scratch/test_htmx_app/src/migrations/: mod.rs
test1/: .env.example  Cargo.toml
test1/.cargo/: config.toml
test1/src/: lib.rs  main.rs
test1/src/controllers/: blog_controller.rs  mod.rs  portfolio_controller.rs
test1/src/migrations/: m20260601000000_create_posts_table.rs  m20260601000000_create_users_table.rs  mod.rs
test1/src/models/: post.rs
test1/src/pages/: blog.rs  home.rs
test2/: .env.example  .gitignore  Cargo.toml  Rullst.toml
test2/.cargo/: config.toml
test2/src/: main.rs
test2/src/controllers/: auth_controller.rs  billing_controller.rs  mod.rs
test2/src/middlewares/: auth_middleware.rs
test2/src/migrations/: m20260601000000_create_users_table.rs  m20260601000002_create_subscriptions_table.rs  mod.rs
test2/src/models/: mod.rs  subscription.rs  user.rs
test2/src/pages/: auth.rs  billing.rs  mod.rs
(+209 files in other folders)
