[workspace]
members = [
    "rullst",
    "rullst-macros",
    "cargo-rullst",
    "examples/blog", "rust-fullstack-benchmarks",
]
exclude = [
    "benchmark/rullst",
    "benchmark/axum",
    "benchmark/actix",
    "benchmark/loco",
    "benchmark/rocket",
    "benchmark/leptos",
]
resolver = "2"

# [patch.crates-io]
# rullst-orm = { path = "../rullst-orm/rullst-orm" }
# rullst-orm-macros = { path = "../rullst-orm/rullst-orm-macros" }
