[workspace]
members = [
    "rullst",
    "rullst-macros",
    "cargo-rullst",
    "examples/blog",
]
exclude = [
    "benchmark/rullst",
    "benchmark/axum",
    "benchmark/actix",
    "benchmark/loco",

    "benchmark/leptos",
    "benchmark/rocket",
    "benchmark/salvo",
    "benchmark/salvo",
]
resolver = "2"

# [patch.crates-io]
# rullst-orm = { path = "../rullst-orm/rullst-orm" }
# rullst-orm-macros = { path = "../rullst-orm/rullst-orm-macros" }
