[package]
name = "cargo-rullst"
version = "1.0.4"
edition = "2024"
description = "A interface de linha de comando (CLI) oficial para gerenciar aplicações Rullst."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/venelouis/Rullst"

[[bin]]
name = "cargo-rullst"
path = "src/main.rs"

[[bin]]
name = "sync-badges"
path = "src/bin/sync_badges.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
chrono = "0.4"
dialoguer = "0.12.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
walkdir = "2.5"
axum = "0.8"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
