[package]
name = "cargo-rullst"
version = "2.0.0"
edition = "2024"
description = "A interface de linha de comando (CLI) oficial para gerenciar aplicações Rullst."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/venelouis/Rullst"

[[bin]]
name = "cargo-rullst"
path = "src/main.rs"

[[bin]]
name = "sync-badges"
path = "src/bin/sync_badges.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
chrono = "0.4.44"
dialoguer = "0.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
pulldown-cmark = "0.13.4"
walkdir = "2.5.0"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
brotli = "8.0.3"
zstd = "0.13.3"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "blocking"] }
