[package]
name = "cargo-rullst"
version = "5.0.0"
authors = ["Rullst Core Team"]
edition = "2024"
description = "The official command-line interface (CLI) for managing Rullst applications."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Rullst/Rullst"
rust-version = "1.97.1"

[[bin]]
name = "cargo-rullst"
path = "src/main.rs"

[[bin]]
name = "sync-badges"
path = "src/bin/sync_badges.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
chrono = "0.4.45"
dialoguer = "0.12.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
walkdir = "2.5.0"
axum = { version = "0.8.9", features = ["ws"] }
notify = "8"
syn = { version = "3", features = ["full", "visit", "visit-mut"] }
tokio = { version = "1.52.3", features = ["full"] }
brotli = "8.0.3"
zstd = "0.13.3"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "blocking"] }
rand = "0.10.1"
quote = "1.0.47"
proc-macro2 = "1.0.107"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "mysql"] }

[dev-dependencies]
insta = { version = "1.41", features = ["yaml"] }
