[package]
name = "rullst-macros"
version = "5.0.0"
authors = ["Rullst Core Team"]
edition = "2024"
description = "JSX-like compilation macros for Rullst framework"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Rullst/Rullst"
rust-version = "1.97.1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "3", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
