[package]
name = "rullst-press"
version = "0.1.1"
edition = "2024"
authors = ["Rullst Team"]
description = "A blazingly fast, native Rust Static Site Generator for premium Markdown documentation."
license = "MIT"
repository = "https://github.com/venelouis/rullst"
keywords = ["markdown", "docs", "ssg", "documentation"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[dependencies]
pulldown-cmark = "0.9"
walkdir = "2.4"
colored = "2.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
