[package]
name = "rullst"
version = "2.0.0"
edition = "2024"
description = "📜🦀🌐 Framework Web FullStack for Rust language 🌐🦀📜"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/venelouis/Rullst"

[features]
default = []
queue-redis = ["dep:redis"]
cache-redis = ["dep:redis"]
mail-smtp = ["dep:lettre"]
oauth = ["dep:rullst-connect"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
rullst-macros = { version = "2.0.0", path = "../rullst-macros" }
# Optional features dependencies
redis = { version = "1.2.2", features = ["tokio-comp", "aio"], optional = true }
lettre = { version = "0.11.22", optional = true, default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "hostname"] }
rullst-connect = { version = "7.0.0", optional = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
rullst-orm = "4.0.1"
sqlx = { version = "0.9.0", features = ["sqlite", "postgres", "mysql", "any", "runtime-tokio", "macros"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.11", features = ["fs", "trace", "cors"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
async-trait = "0.1.89"
argon2 = "0.5.3"
cookie = { version = "0.18.1", features = ["percent-encoding"] }
rand = "0.10.1"
aes-gcm = "0.10.3"
sha2 = "0.11.0"
base64 = "0.22.1"
serde_urlencoded = "0.7"
uuid = { version = "1.23.2", features = ["v4"] }
dashmap = "6.2.1"
cron = "0.16.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
libloading = "0.9.0"
notify = "8.2.0"
ring = { version = "0.17.14", features = ["std"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
web-sys = { version = "0.3.99", features = ["Document", "Element", "Window", "EventTarget", "HtmlElement", "console"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[dev-dependencies]
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"







