[package]
name = "rullst"
version = "4.0.2"
authors = ["Rullst Core Team"]
edition = "2024"
description = "ðŸ“œðŸ¦€ðŸŒ  Framework Web FullStack for Rust language ðŸŒ ðŸ¦€ðŸ“œ"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/venelouis/Rullst"
exclude = ["tests/*", "benches/*", "storage/*", "*.db"]
[features]
default = []
queue-redis = ["dep:redis"]
cache-redis = ["dep:redis"]
mail-smtp = ["dep:lettre"]
oauth = ["dep:rullst-connect"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mutants)'] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
rullst-macros = { version = "4.0.2", path = "../rullst-macros" }
# Optional features dependencies
redis = { version = "1.2.2", features = ["tokio-comp", "aio"], optional = true }
lettre = { version = "0.11.22", optional = true, default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "hostname"] }
rullst-connect = { version = "10.0.1", optional = true }
urlencoding = "2.1.3"
subtle = "2.6.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
rullst-orm = "=6.0.0"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "trace", "cors"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
async-trait = "0.1.89"
argon2 = "0.5.3"
rand = "0.10.1"
aes-gcm = "0.10.3"
sha2 = "0.11.0"
base64 = "0.22.1"
subtle = "2.6.1"
serde_urlencoded = "0.7"
uuid = { version = "1.23.3", features = ["v4"] }
dashmap = "6.2.1"
cron = "0.17.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
libloading = "0.9.0"
notify = "8.2.0"
ring = { version = "0.17.14", features = ["std"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.123"
wasm-bindgen-futures = "0.4.73"
web-sys = { version = "0.3.100", features = ["Document", "Element", "Window", "EventTarget", "HtmlElement", "console"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[dev-dependencies]
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
proptest = "1.11.0"
insta = { version = "1.41", features = ["yaml"] }

[[bench]]
name = "rullst_bench"
harness = false







