[package]
name = "rust-fullstack-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
rullst = { path = "../rullst" }
dioxus = { version = "0.5.1", features = ["macro", "router"] }
dioxus-ssr = "0.5.1"
leptos = { version = "0.6.15", features = ["ssr"] }
tera = "1.19.1"

# Axum for routing
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = "0.5"
loco-rs = "0.16.4"
http = "1.4.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "ssr"
harness = false

[[bench]]
name = "routing"
harness = false
