[package]
name = "test2"
version = "0.1.0"
edition = "2024"

[dependencies]
rullst = { path = "C:/Users/venelouis/Desktop/REPOS/Rullst/rullst" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
rullst-orm = "4.0.1"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
rullst-connect = "7.0.0"

# ⚡ Rullst God-Mode: Compilação Incremental Instantânea (<100ms)
# Se você deseja velocidade de desenvolvimento próxima de linguagens interpretadas,
# você pode usar o backend Cranelift oficial do compilador Rust.
# 
# Requisitos:
#   1. Instalar toolchain nightly: rustup toolchain install nightly
#   2. Instalar o componente: rustup component add rustc-codegen-cranelift-preview --toolchain nightly
#   3. Ative descomentando o bloco abaixo e rodando o projeto com a toolchain nightly (ex: cargo +nightly run)
# 
# [profile.dev]
# codegen-backend = "cranelift"

[workspace]
