[package]
name = "actix-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
askama = "0.12"
dotenvy = "0.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "actix_microbench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
