[package]
name = "axum-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
dotenvy = "0.15"
tower = { version = "0.5.3", features = ["util"] }
tower-service = "0.3.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "axum_microbench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
