[package]
name = "leptos_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["tokio", "json"] }
leptos = { version = "0.8.19", features = ["ssr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "tls-rustls", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "leptos_benches"
harness = false
