[package]
name = "bench-loco"
version = "0.1.0"
edition = "2024"

[dependencies]
loco-rs = { version = "0.13.0" }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.7.9" }
async-trait = "0.1.89"
sea-orm-migration = "1.1.0"
