[package]
name = "warp-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
askama = "0.12"

[dev-dependencies]
bytes = "1.12.0"
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12", features = ["json"] }

[[bench]]
name = "warp_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
