[package]
name = "rullst-blog-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rullst = { path = "../../rullst" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rust-eloquent = "1.1.0"
tokio = { version = "1.43", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
axum = { version = "0.8", features = ["form", "ws"] }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "Window", "EventTarget", "HtmlElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

