[package]
name = "rullst-blog-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rullst = { path = "../../rullst" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
async-trait = "0.1.89"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rullst-orm = "6.0.0"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
axum = { version = "0.8.9", features = ["form", "ws"] }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.123"
web-sys = { version = "0.3.100", features = ["Document", "Element", "Window", "EventTarget", "HtmlElement", "console"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
