[package]
name = "rullst-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rullst]
path = ".."

[dependencies]
libfuzzer-sys = "0.4"
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "mask_pii"
path = "fuzz_targets/mask_pii.rs"
test = false
doc = false

[[bin]]
name = "html_escape"
path = "fuzz_targets/html_escape.rs"
test = false
doc = false

[[bin]]
name = "routing"
path = "fuzz_targets/routing.rs"
test = false
doc = false
