[package]
name = "test_htmx_app"
version = "0.1.0"
edition = "2024"

[dependencies]
rullst = { path = "/home/venelouis/Desktop/REPOS/Rullst/rullst" }
rust-eloquent = "1.1.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

[workspace]
