[package]
name = "omni-app"
version = "0.1.0"
authors = ["Rullst Developer"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
