[package]
name = "rullst-desktop"
version = "0.1.0"
description = "Rullst Desktop Application"
authors = ["Rullst Developer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
